tests/paczka1/fuzzy1/65431676.err
Error in line 3: qQtJQirCwYt S736 22,8
Error in line 7: beEg1Smx3w
Error in line 8:  A490 90,1
Error in line 5: qQtJQirCwYt A352 11,2
Error in line 14: A490 S736 37,8
Error in line 19: qQtJQirCwYt S736 56,3
Error in line 28: JshZjWFaIz A490 26,8
Error in line 31: Ihk S109 33,4
Error in line 36: JshZjWFaIz S109 11,8
Error in line 34: beEg1Smx3w6 A352 240,3
